--- a/src/Migrations/appsettings.json
+++ b/src/Migrations/appsettings.json
@@ -1,1 +1,12 @@
-
+{
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=innovatasks.db"
+  },
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft": "Warning"
+    }
+  },
+  "AllowedHosts": "*"
+}
